Aktualisierung und Korrektur der deutschen Seite

--- a/index_de.html
+++ b/index_de.html
@@ -49,9 +49,9 @@
         <div class="white" >
             <img style="float:left;margin-right:10px;margin-bottom:10px" src="./img/me.jpg" alt="pierre@cppdev.de" height="230">
             <div class="whitewithheight">
-            <p>Ich bin ein begeisteter C++ Entwickler, Conan Verfechter und Jenkins Nutzer. Die allererste Visual Studio Version
+            <p>Ich bin ein begeisteter C++-Entwickler, Conan Verfechter und Jenkins Nutzer. Die allererste Visual Studio Version
             die ich mir installierte war Visual Studio 6.
-            C++ war eine alte sterbende Sprache bis zum 12. August 2011. An diesem Tag wurde der C++11 Standard released.
+            C++ war eine alte, sterbende Sprache bis zum 12. August 2011. An diesem Tag wurde der C++11 Standard released.
             Seitdem bin ich begeistert mit welcher Hingabe das ISO C++ Committee arbeitet und wie schnell die C++ Community wächst. 
             Ich empfehle einen Besuch bei der <a class="intext" href="https://meetingcpp.com/" target="_blank">Meeting CPP</a> Konferenz in Berlin,
             bei der man die Community kennenlernen kann:
@@ -68,8 +68,8 @@
             <a name="Kontakt"></a>
             <h1 class="menu">Kontakt</h1>
 
-            <p>Gerne würde ich Ihr Software- und C++-Projekt mit meiner Expertise als Software Entwickler und Freiberufler unterstützen.
-               <br>Bei Interesse kontaktieren Sie mich:</p>
+            <p>Gerne würde ich Ihr Software- und C++-Projekt mit meiner Expertise als Softwareentwickler und Freiberufler unterstützen.
+               <br>Falls ich Ihr Interesse geweckt habe, können Sie mich kontaktieren unter:</p>
                <table>
                 <tr>
                     <td colspan="2"><div class="address">Dipl.-Inf. Pierre Voigtländer</div></td>
@@ -142,8 +142,8 @@
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">Jan 2020 - Mai 2020</h3>
-                    <p>Product Owner von FEP SDK 2 und FEP SDK 3 (Functional Engineering Platform). FEP ist ein Simulationsframework zur Entwicklung von Verteilten Systemen, Test Applikationen and szenen-basiertes Simulationen.
-                       Mehr Informationen sind zu finden unter:<a href="https://github.com/audi/fep3_sdk" target="_blank">FEP 3 SDK</a> und <a href="https://github.com/audi/fep_sdk" target="_blank">FEP 2 SDK</a>.
+                    <p>Product Owner von FEP SDK 2 und FEP SDK 3 (Functional Engineering Platform). FEP ist ein Simulationsframework zur Entwicklung von Verteilten Systemen, Test Applikationen und szenen-basierten Simulationen.
+                       Mehr Informationen sind zu finden unter: <a href="https://github.com/audi/fep3_sdk" target="_blank">FEP 3 SDK</a> und <a href="https://github.com/audi/fep_sdk" target="_blank">FEP 2 SDK</a>.
                      </p>
                      <div class="usedskills">
                         (C++11, C++14) - Microsoft Visual C++ 2015, gcc4, gcc5, socket API, cmake, RTI DDS, FAST RTPS, googleTest
@@ -154,10 +154,10 @@
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">Jan 2017 - Dez 2019</h3>
-                    <p>Product Owner von FEP SDK 2 und FEP SDK 3 (Functional Engineering Platform). FEP ist ein Simulationsframework zur Entwicklung von Verteilten Systemen, Test Applikationen and szenen-basiertes Simulationen.
-                        Mehr Informationen sind zu finden unter:<a href="https://github.com/audi/fep3_sdk" target="_blank">FEP 3 SDK</a> und <a href="https://github.com/audi/fep_sdk" target="_blank">FEP 2 SDK</a>.
+                    <p>Product Owner von FEP SDK 2 und FEP SDK 3 (Functional Engineering Platform). FEP ist ein Simulationsframework zur Entwicklung von Verteilten Systemen, Test Applikationen und szenen-basierten Simulationen.
+                        Mehr Informationen sind zu finden unter: <a href="https://github.com/audi/fep3_sdk" target="_blank">FEP 3 SDK</a> und <a href="https://github.com/audi/fep_sdk" target="_blank">FEP 2 SDK</a>.
                     </p>
-                    <p>Product Owner and Software Architekt verschiedener Tool Erweiterungen und Anbindungen unter Verwendung der FEP Signalübertragungstechnologie
+                    <p>Product Owner und Software Architekt verschiedener Tool-Erweiterungen und Anbindungen unter Verwendung der FEP Signalübertragungstechnologie
                         (FEP <a href="https://support.digitalwerk.net/adtf/v3/guides/index.html" target="_blank">ADTF</a>Interface, FEP Utilities to control the FEP System, FEP FMI Interface).
                     </p>
                      <div class="usedskills">
@@ -169,13 +169,13 @@
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">Sept 2007 - Dez 2016</h3>
-                    <p>Software Architekt and Entwickler von dem Automotive Data and Time-Triggered Framework (<a href="https://support.digitalwerk.net/adtf/v2/adtf_sdk_html_docs/index.html" target="_blank">ADTF Version 2</a>).
-                       ADTF 2 war das erste offizielle auf dem Markt verfügbare Rapid Prototyping Werkzeug für angepasste Automotive Anwendungen, welches auf Windows und Linux mit demselben with Software Code lief.
+                    <p>Software Architekt und Entwickler von dem Automotive Data and Time-Triggered Framework (<a href="https://support.digitalwerk.net/adtf/v2/adtf_sdk_html_docs/index.html" target="_blank">ADTF Version 2</a>).
+                       ADTF 2 war das erste offiziell auf dem Markt verfügbare Rapid Prototyping Werkzeug für angepasste Automotive Anwendungen, welches auf Windows und Linux mit demselben Software Code lief.
                        Mehr Informationen sind zu finden unter: <a href="https://support.digitalwerk.net/adtf/v2/adtf_sdk_html_docs/index.html" target="_blank">ADTF 2 Documentation</a>.
                      </p>
-                     <p>Software Architect and Developer of Automotive Data and Time-Triggered Framework (<a href="https://support.digitalwerk.net/adtf/v3/guides/index.html" target="_blank">ADTF Version 3</a>). The ADTF 3 is a fully redesign of ADTF 2 
-                        in case of modern C++, build system, const correct API, interprocess design, distributions and many more things.
-                        For more information see <a href="https://support.digitalwerk.net/adtf/v3/guides/index.html" target="_blank">ADTF 3 Documentation</a>.
+                     <p>Software Architekt und Entwickler von Automotive Data and Time-Triggered Framework (<a href="https://support.digitalwerk.net/adtf/v3/guides/index.html" target="_blank">ADTF Version 3</a>). ADTF 3 ist ein vollständiges Redesign von ADTF 2 
+                        in Bezug auf Modern C++, verwendete Build Umgebung, const correct API, Interprozess Kommunikation, Verteilung und vieles mehr.
+                        Mehr Informationene sind zu finden unter: <a href="https://support.digitalwerk.net/adtf/v3/guides/index.html" target="_blank">ADTF 3 Documentation</a>.
                      </p>
                      <div class="usedskills">
                         (C++98, C++03, C++11, C++14) - Microsoft Visual C++ 2003, Microsoft Visual C++ 2005, Microsoft Visual C++ 2008, Microsoft Visual C++ 2013, Microsoft Visual C++ 2015, gcc4, gcc5,
@@ -188,11 +188,11 @@
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">Jun 2005 - Aug 2007</h3>
-                    <p>Entwickler im DevOps Team des Automotive Data and Time-Triggered Frameworks (ADTF Version 1) auf dessen Basis es AUDI erstmals möglich war Video Frames und CAN Nachrichten
-                        zeitsynchron und gleichzeitig in eine einzige streaming-basierte Messdatei aufzuzeichnen (also called Drive Recorder).
+                    <p>Entwickler im DevOps-Team des Automotive Data and Time-Triggered Frameworks (ADTF Version 1), auf dessen Basis war es AUDI erstmals möglich Video Frames und CAN Nachrichten
+                        zeitsynchron und gleichzeitig in eine einzige streaming-basierte Messdatei aufzuzeichnen (auch Drive Recorder genannt).
                     </p>
-                    <p>Entwickler im DevOps Team des Automotive Data and Time-Triggered Frameworks (ADTF Version 2).
-                       ADTF 2 war das erste offizielle auf dem Markt verfügbare Rapid Prototyping Werkzeug für angepasste Automotive Anwendungen, welches auf Windows und Linux mit demselben with Software Code lief.
+                    <p>Entwickler im DevOps-Team des Automotive Data and Time-Triggered Frameworks (ADTF Version 2).
+                       ADTF 2 war das erste offiziell auf dem Markt verfügbare Rapid Prototyping Werkzeug für angepasste Automotive Anwendungen, welches auf Windows und Linux mit demselben Software Code lief.
                        Mehr Informationen sind zu finden unter: <a href="https://support.digitalwerk.net/adtf/v2/adtf_sdk_html_docs/index.html" target="_blank">ADTF 2 Documentation</a>.
                      </p>
                      <p>Entwicklung und Erweiterung einer cross platform C++-Bibliothek für Threading, String-Operations, Filesystem Zugriffe und Socket I/O (und vieles mehr).
@@ -209,8 +209,8 @@
                 <div class="expitem">
                     <h3 class="menu">Mai 2004 - Mai 2005</h3>
                     <p>Unterstützung bei der Weiterentwicklung eines Microsoft Excel VBScripting Werkzeugs zur Verwaltung und Zeiterfassung von Projektzeiten zur Abrechnung.</p>
-                    <p>Entwicklung von MATLAB S-Functions in C++ welche Teil einer Data Dictionary Anwendung zur Parametrierung von Simulink Modellen ist.</p>
-                    <p>DevOps für MATLAB figure Skripte zur Unterstützung der Adaptive Cruise Control Entwicklung.</p>
+                    <p>Entwicklung von MATLAB S-Functions in C++, welche Teil einer Data Dictionary Anwendung zur Parametrierung von Simulink Modellen sind.</p>
+                    <p>DevOps für MATLAB-figure Skripte zur Unterstützung der Adaptive Cruise Control Entwicklung.</p>
                     <p>Weiterentwicklung von NI LabView Modellen für nutzerdefinierte CAN Bus Signalvisualisierungen und Datenanalysewerkzeuge.</p>
                     <div class="usedskills">
                         (C++98, C++03) - Microsoft Visual C++ 2003, Microsoft Visual C++ 2005, Microsoft VBScript, ODBC, MATLAB m-script, MATLAB m-figure library, MFC Framework,
@@ -222,29 +222,29 @@
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">Dez 2003 - Mär 2004</h3>
-                    <p>Programmierung eines Datenanalyse- und Visualisierungswerkzeugs zur Verwendung mit archivierte Backup.
+                    <p>Programmierung eines Datenanalyse- und Visualisierungswerkzeugs zur Wiederverwendung der Daten aus archivierten Backup-Dateien.
                     </p>
                     <div class="usedskills">
                     Microsoft Visual Studio 6, Microsoft Visual Basic 6
                     </div>
                 </div>
             </div>
-            <h2 class="menu">Werksstudent bei <a href="https://www.infineon.com/" target="_blank" class="intext">Infineon Technologies AG</a></h2>
+            <h2 class="menu">Werkstudent bei <a href="https://www.infineon.com/" target="_blank" class="intext">Infineon Technologies AG</a></h2>
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">Mai 2002 - Jul 2002</h3>
-                    <p>Programmierung einer Test- und Visualisierungssoftware, um Statistische Tests mit einem einfachen Onboard Zuallszahlengenerator durchzuführen.</p>
+                    <p>Programmierung einer Test- und Visualisierungssoftware, um statistische Tests mit einem einfachen Onboard Zufallszahlengenerator durchzuführen.</p>
                     <div class="usedskills">
                         (C++98) - Microsoft Visual C++ 6, Microsoft Visual Studio 6, Microsoft Windows API
                     </div>
                 </div>
             </div>
-            <h2 class="menu">Werksstudent bei <a href="https://de.wikipedia.org/wiki/PC-Ware" target="_blank" class="intext">PC WARE Information Technologies AG</a></h2>
+            <h2 class="menu">Werkstudent bei <a href="https://de.wikipedia.org/wiki/PC-Ware" target="_blank" class="intext">PC WARE Information Technologies AG</a></h2>
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">Aug 2001 - Apr 2002</h3>
-                    <p>Programmierung von Dateikonvertierungswerkzeugen zur Umwandlung von zuliefererspezifischen Produktkatalog Formaten (XML, BMEcat, ...)
-                    in CSV, um diese dann in die PC Ware Produktdatenbank zu importieren.
+                    <p>Programmierung von Dateikonvertierungswerkzeugen zur Umwandlung von zuliefererspezifischen Produktkatalogformaten (XML, BMEcat, ...)
+                    in CSV, um diese dann in die Produktdatenbank zu importieren.
                     </p>
                     <div class="usedskills">
                     Microsoft Visual Studio 6, Microsoft Visual Basic 6
@@ -256,7 +256,7 @@
                 <div class="expitem">
                     <h3 class="menu">Oct 2000 - Feb 2001</h3>
                     <p>Unterstützung der WEB-Entwicklungsabteilung bei der Programmierung von Konvertierungs- und Importwerkzeugen von zuliefererspezifischen Produktkatalogen
-                        in den SCAN Computers Produktkatalogdatenbank .
+                        in die Produktkatalogdatenbank.
                     </p>
                     <div class="usedskills">
                     Microsoft Visual Studio 6, Microsoft Visual Basic 6, SQL Server 7.0
@@ -276,7 +276,7 @@
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">Feb 2004</h3>
-                    <p>Teilnahme an dem Studentenaustausch Programm am <a href="https://www.bolton.ac.uk/" target="_blank">Bolton Institute of Technology (heute University of Bolton)</a> im Studienjahr 2000/2001.
+                    <p>Teilnahme an dem Studentenaustauschprogramm am <a href="https://www.bolton.ac.uk/" target="_blank">Bolton Institute of Technology (heute University of Bolton)</a> im Studienjahr 2000/2001.
                     </p>
                 </div>
             </div>
@@ -304,9 +304,9 @@
         <div class="white">
             <a name="Interessen"></a>
             <h1 class="menu">Interessen</h1>
-            Ich verbringe gerne die Zeit mit meiner Familie und bin ein begeisterter Ruderer beim <a href="https://drci.de" target="_blank" class="intext">Donau Ruder Club Ingolstadt e.V.</a>.
+            Ich verbringe gerne Zeit mit meiner Familie und bin begeisterter Ruderer beim <a href="https://drci.de" target="_blank" class="intext">Donau Ruder Club Ingolstadt e.V</a>.
             Dort kümmere ich mich um die IT, den Social Media Auftritt des Clubs und rudere viele Kilometer auf unserer schönen Donau in Ingolstadt im Mannschaftsboot oder Einer.
-            Für mich ist das faszinierenste Boot ein <a href="https://www.youtube.com/watch?v=mxNThmWIYYU&t=84" target="_blank" class="intext">2- (Zweier ohne Steuermann)</a>
+            Für mich ist das faszinierenste Boot ein <a href="https://www.youtube.com/watch?v=mxNThmWIYYU&t=84" target="_blank" class="intext">2- (Zweier ohne Steuermann)</a>,
             da man sich hierbei zu 100% auf seinen Ruderpartner verlassen muss. Ich bin froh so jemanden im Club gefunden zu haben.
             <br>
             <br>
