--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>cppDev - C++ Developer - Software Engineering - Pierre Voigtländer</title>
         <!-- link to main stylesheet -->
         <link rel="stylesheet" type="text/css" href="./css/main.css">
+        <link rel="icon" href="https://jeanrep.github.io/favicon.png">
     </head>
     <body>
         <nav class="white">
