change email address

--- a/index_de.html
+++ b/index_de.html
@@ -21,7 +21,7 @@
                     <tr>
                         <td>
                             <li class="mysurname">PIERRE VOIGTLÄNDER</li>
-                            <li><a class="topimg" href="mailto:pierre@cppdev.de"><img src="./img/links/email.png" alt="pierre@cppdev.de" width="30"></a></li>
+                            <li><a class="topimg" href="mailto:mail@cppdev.de"><img src="./img/links/email.png" alt="mail@cppdev.de" width="30"></a></li>
                             <li><a class="topimg" href="https://github.com/jeanreP"><img src="./img/links/github.png" alt="github.com/jeanreP" width="30"></a></li>
                             <li><a class="topimg" href="http://www.cppdev.de"><img src="./img/links/welt.svg" alt="www.cppdev.de" width="30"></a></li>
                             <li><a class="topimg" href="http://www.linkedin.com/in/pierre-voigtlaender-cppdev"><img src="./img/links/linkedin.jpg" alt="linkedin.com/in/pierre-voigtlaender-cppdev" width="30"></a></li>
@@ -48,7 +48,7 @@
             </div>
         </nav>
         <div class="white" >
-            <img style="float:left;margin-right:10px;margin-bottom:10px" src="./img/me.jpg" alt="pierre@cppdev.de" height="230">
+            <img style="float:left;margin-right:10px;margin-bottom:10px" src="./img/me.jpg" alt="mail@cppdev.de" height="230">
             <div class="whitewithheight">
             <p>Ich bin ein begeisteter C++-Entwickler, Conan Verfechter und Jenkins Nutzer. Die allererste Visual Studio Version
             die ich mir installierte war Visual Studio 6.
@@ -85,7 +85,7 @@
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="email" height="20"></td>
-                    <td><div class="address"><a class="intext" href="mailto:pierre@cppdev.de">pierre@cppdev.de</a></div></td>
+                    <td><div class="address"><a class="intext" href="mailto:mail@cppdev.de">mail@cppdev.de</a></div></td>
                 </tr>
             </table>
             <br>
@@ -357,11 +357,11 @@
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="email" height="20"></td>
-                    <td><div class="address"><a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></div></td>
+                    <td><div class="address"><a class="intext" href="mailto:mail@cppdev.de">mail@cppdev.de</a></div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="email" height="20"></td>
-                    <td><div class="address">Datenschutz: <a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></div></td>
+                    <td><div class="address">Datenschutz: <a class="intext" href="mailto:mail@cppdev.de">mail@cppdev.de</a></div></td>
                 </tr>
             </table>
             <br><br>
